data/issues_nolabel/nolabel_test_3407.txt
//util/python:python_headers: 'python_include' resolves to 'util/python/python_include' not in 'third_party'

I am installing TensorFlow on Unbutu 12.04 with source code. I can build bazel-bin/tensorflow/cc/tutorials_example_trainer --use_gpu successfully, but where i create pip package, i get the warnning:
WARNING: /root/.cache/bazel/_bazel_root/f23957347b508b087abaf4db43031df3/external/protobuf/WORKSPACE:1: Workspace name in /root/.cache/bazel/_bazel_root/f23957347b508b087abaf4db43031df3/external/protobuf/WORKSPACE (@main) does not match the name given in the repository's definition (@protobuf); this will cause a build error in future versions.
WARNING: /root/.cache/bazel/_bazel_root/f23957347b508b087abaf4db43031df3/external/re2/WORKSPACE:1: Workspace name in /root/.cache/bazel/_bazel_root/f23957347b508b087abaf4db43031df3/external/re2/WORKSPACE (@main) does not match the name given in the repository's definition (@re2); this will cause a build error in future versions.
WARNING: /root/.cache/bazel/_bazel_root/f23957347b508b087abaf4db43031df3/external/highwayhash/WORKSPACE:1: Workspace name in /root/.cache/bazel/_bazel_root/f23957347b508b087abaf4db43031df3/external/highwayhash/WORKSPACE (@main) does not match the name given in the repository's definition (@highwayhash); this will cause a build error in future versions.
WARNING: /data1/web/soft/tensorflow/tensorflow/tensorflow/util/python/BUILD:11:16: in includes attribute of cc_library rule //util/python:python_headers: 'python_include' resolves to 'util/python/python_include' not in 'third_party'. This will be an error in the future.
I build failed with error:
/tensorflow/tensorflow/tensorflow/python/BUILD:87:1: C++ compilation of rule '//tensorflow/python:py_func_lib' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command third_party/gpus/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object ... (remaining 121 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/python/lib/core/py_func.cc: In function 'tensorflow::Status tensorflow::{anonymous}::ConvertNdarrayToTensor(PyObject_, tensorflow::Tensor_)':
tensorflow/python/lib/core/py_func.cc:164:37: error: 'PyArray_SHAPE' was not declared in this scope
shape.AddDim(PyArray_SHAPE(input)[i]);
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
I have run ./configure like this:
Please specify the location of python. [Default is /usr/bin/python]:
Do you wish to build TensorFlow with Google Cloud Platform support? [y/N] n
No Google Cloud Platform support will be enabled for TensorFlow
Do you wish to build TensorFlow with GPU support? [y/N] y
GPU support will be enabled for TensorFlow
Please specify which gcc nvcc should use as the host compiler. [Default is /usr/bin/gcc]: /usr/bin/gcc-4.9
Please specify the Cuda SDK version you want to use, e.g. 7.0. [Leave empty to use system default]: 7.0
Please specify the location where CUDA 7.0 toolkit is installed. Refer to README.md for more details. [Default is /usr/local/cuda]:
Please specify the Cudnn version you want to use. [Leave empty to use system default]: 7.0
Please specify the location where cuDNN 7.0 library is installed. Refer to README.md for more details. [Default is /usr/local/cuda]:
Please specify a list of comma-separated Cuda compute capabilities you want to build with.
You can find the compute capability of your device at: https://developer.nvidia.com/cuda-gpus.
Please note that each additional compute capability significantly increases your build time and binary size.
[Default is: "3.5,5.2"]:
Setting up Cuda include
Setting up Cuda lib64
Setting up Cuda bin
Setting up Cuda nvvm
Setting up CUPTI include
Setting up CUPTI lib64
Configuration finished
I'm not familiar with bazel, is there any one who can help?